# neotec_ai_v0.7.0

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
neotec_ai/: hooks.py  install.py  modules.txt
neotec_ai/api/: automation.py  chat.py  doc_ai.py  ingest.py  permissions.py  reports.py  voice.py  workspace.py
neotec_ai/config/: desktop.py
neotec_ai/neotec_ai/doctype/neotec_ai_action_log/: neotec_ai_action_log.json  neotec_ai_action_log.py
neotec_ai/neotec_ai/doctype/neotec_ai_automation_recipe/: neotec_ai_automation_recipe.json  neotec_ai_automation_recipe.py
neotec_ai/neotec_ai/doctype/neotec_ai_conversation/: neotec_ai_conversation.json  neotec_ai_conversation.py
neotec_ai/neotec_ai/doctype/neotec_ai_data_source/: neotec_ai_data_source.json  neotec_ai_data_source.py
neotec_ai/neotec_ai/doctype/neotec_ai_feature_registry/: neotec_ai_feature_registry.json  neotec_ai_feature_registry.py
neotec_ai/neotec_ai/doctype/neotec_ai_ingestion_job/: neotec_ai_ingestion_job.json  neotec_ai_ingestion_job.py
neotec_ai/neotec_ai/doctype/neotec_ai_knowledge_asset/: neotec_ai_knowledge_asset.json  neotec_ai_knowledge_asset.py
neotec_ai/neotec_ai/doctype/neotec_ai_prompt_template/: neotec_ai_prompt_template.json  neotec_ai_prompt_template.py
neotec_ai/neotec_ai/page/neotec_ai_hub/: neotec_ai_hub.js  (+1 more)
neotec_ai/public/: build.json
neotec_ai/public/css/: neotec_ai.css
neotec_ai/public/js/: neotec_ai_doc_assist.js  neotec_ai_hub.js
neotec_ai/services/: ai_orchestrator.py  context_loader.py  crm_social_service.py  report_designer.py  voice_router.py
(+4 files in other folders)
