[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neotec_ai"
version = "0.7.0"
description = "Neotec AI cross-module automation platform for Frappe ERPNext"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Neotec", email = "support@neotec.ai"}]
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["neotec_ai*"]

[tool.bench.frappe-dependencies]
frappe = ">=15,<17"
erpnext = ">=15,<17"
